Java 21 + Entry class sealed